--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
-	<link rel="icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
 
 <!-- Nav stuff -->
+
 <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
 <div class="container-fluid">
 	<a class="navbar-logo" href="#"><img src="img/logo.png" style="height: 100px;"></a>
@@ -26,18 +26,18 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto">
-			<li class="nav-item">
+		<!--	<li class="nav-item">
 				<a class="nav-link" href="#">About Us</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Meet the Team</a>
-			</li>
+			</li> -->
 			<li class="nav-item">
 				<a class="nav-link" href="#">Activity Sheets</a>
 			</li>
-			<li class="nav-item">
+		<!---	<li class="nav-item">
 				<a class="nav-link" href="#">Get Involved</a>
-			</li>
+			</li> -->
 			<li class="nav-item">
 				<a class="nav-link" href="#">Contact</a>
 			</li>
@@ -47,67 +47,80 @@
 </nav>
 
 <!--- Slideshow area -->
-<div id="slides" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="1"></li>
-		<li data-target="#slides" data-slide-to="2"></li>
-		<li data-target="#slides" data-slide-to="3"></li>
-	</ul>
-<div class="carousel-inner">
-	<div class="carousel-item active">
-		<img src="img/dog1.jpg">
-		<div class="carousel-caption">
-			<h1 class="display-2">Jit Jots</h1>
-			<p>Jit Jots activity sheets contain educational yet fun activities with the aim of 
-				teaching elementary school students various educational topics.</p>
-			<button type="button" class="btn btn-outline-light btn-lg">Get Involved</button>
+
+<div id="slide-area">
+	<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-lg-4">
+			<div class="carousel-caption">
+				<h1 class="display-2">Jit Jots</h1>
+				<p>Jit Jots activity sheets contain educational yet fun activities with the aim of 
+					teaching elementary school students various educational topics.</p>
+				<button type="button" class="btn btn-dark btn-lg">Get Involved</button>
+			</div>
+		</div>
+
+		<div class="col-lg-8">
+			<div id="slides" class="carousel slide" data-ride="carousel">
+				<ul class="carousel-indicators carousel-inner">
+					<li data-target="#slides" data-slide-to="0" class="active"></li>
+					<li data-target="#slides" data-slide-to="1"></li>
+					<li data-target="#slides" data-slide-to="2"></li>
+					<li data-target="#slides" data-slide-to="3"></li>
+				</ul>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img src="img/dog1.jpg">
+					</div>
+					<div class="carousel-item">
+						<img src="img/dog2.jpg">
+					</div>
+					<div class="carousel-item">
+						<img src="img/dog1.jpg">
+					</div>
+					<div class="carousel-item">
+						<img src="img/dog2.jpg">
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="carousel-item">
-		<img src="img/dog2.jpg">
-	</div>
-	<div class="carousel-item">
-		<img src="img/dog1.jpg">
-	</div>
-	<div class="carousel-item">
-		<img src="img/dog2.jpg">
 	</div>
 </div>
+
+<!--- About Us (change to white when testimonial is added) -->
+<div id="about-us">
+	<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-lg-4 text-center">
+			<h1 id="about-us-title" class="display-4">About Us</h1>
+			<p id="about-us-text">Jit Jots was founded on the basis of...</p>
+			<br>
+			<br>
+			<a id="meet-team-btn" href="#" class="btn btn-outline-dark">Meet the Team</a>
+		</div>
+		<div class="col-lg-8">
+			<p>This is where img goes according to original site :)))</p>
+		</div>
+	</div>
+	</div>
 </div>
-
-<!--- Jumbotron -->
-
-
-<!--- Welcome Section -->
-
-
-<!--- Three Column Section -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Fixed background -->
-
-
-<!--- Emoji Section -->
-
-  
-<!--- Meet the team -->
-
-
-<!--- Cards -->
-
-
-<!--- Two Column Section -->
-
-
-<!--- Connect -->
-
 
 <!--- Footer -->
-
+<footer>
+	<div class="container-fluid padding">
+	<div class="row text-center">
+		<div id="follow" class="col-md-6">
+			<h2>Follow us on</h2>
+		</div>
+		<div id="contact" class="col-md-6">
+			<h2>Contact us at</h2>
+			<br>
+			<p>something@jitjots.com</p>
+		</div>
+	</div>
+	</div>
+</footer>
 
 
 
