--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Jit Jots</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -39,7 +39,7 @@
 				<a class="nav-link" href="#">Get Involved</a>
 			</li> -->
 			<li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
+				<a class="nav-link" href="#contact-email">Contact</a>
 			</li>
 		</ul>
 	</div>
@@ -112,10 +112,13 @@
 	<div class="row text-center">
 		<div id="contact" class="col-md-4">
 			<h2>Contact us at</h2>
-			<p>something@jitjots.com</p>
+			<p id="contact-email">contact@jitjots.com</p>
 		</div>
 		<div id="follow" class="col-md-8">
 			<h2>Follow us on</h2>
+			<a href="https://www.facebook.com/Jit-Jots-103649161386666/?modal=admin_todo_tour" target="_blank" class="fa fa-facebook"></a>
+			<a href="https://www.instagram.com/jitjotsactivities/?hl=en" target="_blank" class="fa fa-instagram"></a>
+			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
 	</div>
 	</div>
