Added activity sheets page draft

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
 <div class="container-fluid">
-	<a class="navbar-logo" href="#"><img src="img/logo.png" style="height: 100px;"></a>
+	<a class="navbar-logo" href="index.html"><img src="img/logo.png" style="height: 100px;"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 	data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
 				<a class="nav-link" href="#">Meet the Team</a>
 			</li> -->
 			<li class="nav-item">
-				<a class="nav-link" href="#">Activity Sheets</a>
+				<a class="nav-link" href="activity-sheets.html">Activity Sheets</a>
 			</li>
 		<!---	<li class="nav-item">
 				<a class="nav-link" href="#">Get Involved</a>
@@ -56,7 +56,7 @@
 				<h1 class="display-2">Jit Jots</h1>
 				<p>Jit Jots activity sheets contain educational yet fun activities with the aim of 
 					teaching elementary school students various educational topics.</p>
-				<button type="button" class="btn btn-dark btn-lg">Get Involved</button>
+				<!-- <button id= "get-involved-btn" type="button" class="btn btn-dark btn-lg">Get Involved</button> -->
 			</div>
 		</div>
 
