--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -4,11 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Activity Sheets</title>
+	<title>Jit Jots</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link href="style.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -64,24 +63,113 @@
                 and the intermediate level activity sheets are intended for children in grades 4-7.</p>
         </div>
     </div>
+    </div>
+</div>
 
     
 
-        <!-- Add next sheets here -->
+    <div class="container-fluid padding">
+    <div class="row sheets-display">
+        <div class="col-lg-2 outer-edge">
+        </div>
+        <div id="col-test" class="col-lg-8"> 
 
-    <div class="row sheets-archive">
-        <div class="col-lg-3">
+
+            <div class="row issue-display">
+                <div id="inner-col" class="col-lg-2 text-center">
+                    <h1>Issue 03</h1>
+                    <p>Jul 25, 2020</p>
+                    <h1>Theme</h1>
+                    <p>Global Warming</p>
+                </div>
+                <div id="blank" class="col">
+                    <a href="#">
+                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                    </a>
+                    <a href="#" class="btn btn-colour-1">Answers</a>
+                </div>
+                <div id="answer" class="col">
+                    <a href="#">
+                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                    </a>
+                    <a href="#" class="btn btn-colour-1">Answers</a>
+                </div>
+            </div>
+
+            <div class="row issue-display">
+                <div id="inner-col" class="col-lg-2 text-center">
+                    <h1>Issue 02</h1>
+                    <p>Jul 18, 2020</p>
+                    <h1>Theme</h1>
+                    <p>Viruses & Germs</p>
+                </div>
+                <div id="blank" class="col">
+                    <a href="#">
+                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                    </a>
+                    <a href="#" class="btn btn-colour-1">Answers</a>
+                </div>
+                <div id="answer" class="col">
+                    <a href="https://drive.google.com/file/d/1JDj-r14p10qF97QYJeRVWwrJB9SHlTtS/view?usp=sharing" target="_blank">
+                        <img id="testerino" src="img/Sheet Previews/2-int.jpg">
+                    </a>
+                    <a href="#" class="btn btn-colour-1">Answers</a>
+                </div>
+            </div>
+
+            <div class="row issue-display">
+                <div id="inner-col" class="col-lg-2 text-center">
+                    <h1>Issue 01</h1>
+                    <p>Jul 11, 2020</p>
+                    <h1>Theme</h1>
+                    <p>Space</p>
+                </div>
+                <div id="blank" class="col">
+                    <a href="https://drive.google.com/file/d/1sdicV1EKxDaFt8UCwukp7_b92vLtmRXV/view?usp=sharing" target="_blank">
+                        <img id="testerino" src="img/Sheet Previews/1-pri.jpg">
+                    </a>
+                    <a href="https://drive.google.com/file/d/16gl_zzDpOSuqHO6mL55JUIH9oTr-0orZ/view?usp=sharing" target="_blank"
+                    class="btn btn-colour-1">Answers</a>
+                </div>
+                <div id="answer" class="col">
+                    <a href=#>
+                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                    </a>
+                    <a href="#" class="btn btn-colour-1">Answers</a>
+                </div>
+            </div>  
 
         </div>
-        <div class="col-lg-6 sheets-issues">
+        <div class="col-lg-2 outer-edge">
+        </div>
+    </div>
+    </div>
+
+<!-- image link code
+
+         <div class="col-lg-3 text-right sheets-issues">
            <h1>Issue 03</h1>
             <p>Jul 25, 2020</p>
             <h1>Theme</h1>
             <p>Global Warming</p>
         </div>
-    </div>
+        <div id="blank" class="col-lg-3">
+            <a href="https://drive.google.com/file/d/15CQqIX_wLLYTo80RVx5my8YRxfA_fsOi/view?usp=sharing" target="_blank">
+                <img id="testerino" src="img/Copy of Space.jpg">
+            </a>
+            <br>
+            <a href="#" class="btn btn-outline-dark">Answers</a>
+        </div>
+        <div class="col-lg-3">
+            <a href="https://drive.google.com/file/d/15CQqIX_wLLYTo80RVx5my8YRxfA_fsOi/view?usp=sharing" target="_blank">
+                <img id="testerino" src="img/Copy of Space.jpg">
+            </a>
+        </div>   
+-->
 
-    <div class="row sheets-archive">
+
+    <!--
+    <div class="row sheets-display">
         <div class="col-lg-3">
 
         </div>
@@ -107,8 +195,9 @@
         </div>
     </div>
     </div>
+-->
 
-</div>
+
 
 <!--- Footer -->
 <footer>
