--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link href="style.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -97,10 +96,10 @@
 			<p id="about-us-text">Jit Jots was founded on the basis of...</p>
 			<br>
 			<br>
-			<a id="meet-team-btn" href="#" class="btn btn-outline-dark">Meet the Team</a>
+			<!-- <a id="meet-team-btn" href="#" class="btn btn-outline-dark">Meet the Team</a> -->
 		</div>
 		<div class="col-lg-8">
-			<p>This is where img goes according to original site :)))</p>
+			
 		</div>
 	</div>
 	</div>
