Cleaned up some classes and Id's for activity sheets

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -46,6 +46,8 @@
     </div>
 </nav>
 
+<!-- Main content (Display of activity sheets -->
+
 <div>
     <div class="container-fluid padding">
     <div id="sheets-message" class="row text-center">
@@ -70,136 +72,87 @@
 
     <div class="container-fluid padding">
     <div class="row sheets-display">
-        <div class="col-lg-2 outer-edge">
-        </div>
-        <div id="col-test" class="col-lg-8"> 
 
+        <div class="col-lg-2 sheets-outer">
+        </div>
+        <div id="display-col" class="col-lg-8"> 
 
             <div class="row issue-display">
-                <div id="inner-col" class="col-lg-2 text-center">
+                <div class="col-lg-2 text-center sheet-info">
                     <h1>Issue 03</h1>
                     <p>Jul 25, 2020</p>
                     <h1>Theme</h1>
                     <p>Global Warming</p>
                 </div>
-                <div id="blank" class="col">
+                <div id="blank-sheet" class="col">
                     <a href="#">
-                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                        <img class="sheet-preview" src="img/Sheet Previews/construction.jpg">
                     </a>
                     <a href="#" class="btn btn-colour-1">Answers</a>
                 </div>
-                <div id="answer" class="col">
+                <div id="answer-sheet" class="col">
                     <a href="#">
-                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                        <img class="sheet-preview" src="img/Sheet Previews/construction.jpg">
                     </a>
                     <a href="#" class="btn btn-colour-1">Answers</a>
                 </div>
             </div>
 
             <div class="row issue-display">
-                <div id="inner-col" class="col-lg-2 text-center">
+                <div class="col-lg-2 text-center sheet-info">
                     <h1>Issue 02</h1>
                     <p>Jul 18, 2020</p>
                     <h1>Theme</h1>
                     <p>Viruses & Germs</p>
                 </div>
-                <div id="blank" class="col">
+                <div id="blank-sheet" class="col">
                     <a href="#">
-                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                        <img class="sheet-preview" src="img/Sheet Previews/construction.jpg">
                     </a>
                     <a href="#" class="btn btn-colour-1">Answers</a>
                 </div>
-                <div id="answer" class="col">
+                <div id="answer-sheet" class="col">
                     <a href="https://drive.google.com/file/d/1JDj-r14p10qF97QYJeRVWwrJB9SHlTtS/view?usp=sharing" target="_blank">
-                        <img id="testerino" src="img/Sheet Previews/2-int.jpg">
+                        <img class="sheet-preview" src="img/Sheet Previews/2-int.jpg">
                     </a>
-                    <a href="#" class="btn btn-colour-1">Answers</a>
+                    <a href="https://drive.google.com/file/d/1aUld082NXQTOJu2YNg2K48BQqXtfqG8D/view?usp=sharing" target="_blank"
+                    class="btn btn-colour-1">Answers</a>
                 </div>
             </div>
 
-            <div class="row issue-display">
-                <div id="inner-col" class="col-lg-2 text-center">
+            <div id="bottom-sheet" class="row issue-display">
+                <div class="col-lg-2 text-center sheet-info">
                     <h1>Issue 01</h1>
                     <p>Jul 11, 2020</p>
                     <h1>Theme</h1>
                     <p>Space</p>
                 </div>
-                <div id="blank" class="col">
+                <div id="blank-sheet" class="col">
                     <a href="https://drive.google.com/file/d/1sdicV1EKxDaFt8UCwukp7_b92vLtmRXV/view?usp=sharing" target="_blank">
-                        <img id="testerino" src="img/Sheet Previews/1-pri.jpg">
+                        <img class="sheet-preview" src="img/Sheet Previews/1-pri.jpg">
                     </a>
                     <a href="https://drive.google.com/file/d/16gl_zzDpOSuqHO6mL55JUIH9oTr-0orZ/view?usp=sharing" target="_blank"
                     class="btn btn-colour-1">Answers</a>
                 </div>
-                <div id="answer" class="col">
-                    <a href=#>
-                        <img id="testerino" src="img/Sheet Previews/construction.jpg">
+                <div id="answer-sheet" class="col">
+                    <a href= "https://drive.google.com/file/d/1Bev_G6fWKlR9yao3FYNgTLTuz39uHMCJ/view?usp=sharing" target="_blank">
+                        <img class="sheet-preview" src="img/Sheet Previews/1-int.jpg">
                     </a>
-                    <a href="#" class="btn btn-colour-1">Answers</a>
+                    <a href="https://drive.google.com/file/d/1StxzVEwD65efwod4ybeA-TTgnKFphdSn/view?usp=sharing" target="_blank"
+                    class="btn btn-colour-1">Answers</a>
                 </div>
             </div>  
 
         </div>
-        <div class="col-lg-2 outer-edge">
+        <div class="col-lg-2 sheets-outer">
         </div>
     </div>
     </div>
-
-<!-- image link code
-
-         <div class="col-lg-3 text-right sheets-issues">
-           <h1>Issue 03</h1>
-            <p>Jul 25, 2020</p>
-            <h1>Theme</h1>
-            <p>Global Warming</p>
-        </div>
-        <div id="blank" class="col-lg-3">
-            <a href="https://drive.google.com/file/d/15CQqIX_wLLYTo80RVx5my8YRxfA_fsOi/view?usp=sharing" target="_blank">
-                <img id="testerino" src="img/Copy of Space.jpg">
-            </a>
-            <br>
-            <a href="#" class="btn btn-outline-dark">Answers</a>
-        </div>
-        <div class="col-lg-3">
-            <a href="https://drive.google.com/file/d/15CQqIX_wLLYTo80RVx5my8YRxfA_fsOi/view?usp=sharing" target="_blank">
-                <img id="testerino" src="img/Copy of Space.jpg">
-            </a>
-        </div>   
--->
-
-
-    <!--
-    <div class="row sheets-display">
-        <div class="col-lg-3">
-
-        </div>
-        <div class="col-lg-6 sheets-issues">
-           <h1>Issue 02</h1>
-            <p>Jul 11, 2020</p>
-            <h1>Theme</h1>
-            <p>Virus & Germs</p>
-        </div>
-    </div>
-
-
-
-    <div id="sheets-issues-bot" class="row">
-        <div class="col-lg-3">
-
-        </div>
-        <div class="col-lg-6">
-            <h1>Issue 01</h1>
-            <p>Jul 11, 2020</p>
-            <h1>Theme</h1>
-            <p>Space</p>
-        </div>
-    </div>
-    </div>
--->
 
 
 
 <!--- Footer -->
+
 <footer>
 	<div class="container-fluid padding">
 	<div class="row text-center">
@@ -218,5 +171,4 @@
 </footer>
 
 </body>
-
 </html>
