--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
 
 		<div class="col-lg-8">
 			<div id="slides" class="carousel slide" data-ride="carousel">
+
+				<!-- Carousel indicator
 				<ul class="carousel-indicators carousel-inner">
 					<li data-target="#slides" data-slide-to="0" class="active"></li>
 					<li data-target="#slides" data-slide-to="1"></li>
 					<li data-target="#slides" data-slide-to="2"></li>
 					<li data-target="#slides" data-slide-to="3"></li>
 				</ul>
+				-->
+
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="img/dog1.jpg">
