Meet the Team page framework

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -29,11 +29,12 @@
             <!--	<li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
+            -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Meet the Team</a>
-                </li> -->
+                    <a class="nav-link" href="meet-the-team.html">Meet the Team</a>
+                </li> 
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Activity Sheets</a>
+                    <a class="nav-link active" href="activity-sheets.html">Activity Sheets</a>
                 </li>
             <!---	<li class="nav-item">
                     <a class="nav-link" href="#">Get Involved</a>
@@ -44,7 +45,7 @@
             </ul>
         </div>
     </div>
-</nav>
+    </nav>
 
 <!-- Main content (Display of activity sheets -->
 
