--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
     <div class="container-fluid">
-        <a class="navbar-logo" href="index.html"><img src="img/logo.png" style="height: 100px;"></a>
+        <a class="navbar-logo" href="index"><img src="img/logo.png" style="height: 100px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
@@ -31,10 +31,10 @@
                 </li>
             -->
                 <li class="nav-item">
-                    <a class="nav-link" href="meet-the-team.html">Meet the Team</a>
+                    <a class="nav-link" href="meet-the-team">Meet the Team</a>
                 </li> 
                 <li class="nav-item">
-                    <a class="nav-link active" href="activity-sheets.html">Activity Sheets</a>
+                    <a class="nav-link active" href="activity-sheets">Activity Sheets</a>
                 </li>
             <!---	<li class="nav-item">
                     <a class="nav-link" href="#">Get Involved</a>
@@ -164,7 +164,7 @@
 		<div id="follow" class="col-md-8">
 			<h2>Follow us on</h2>
 			<a href="https://www.facebook.com/Jit-Jots-103649161386666/?modal=admin_todo_tour" target="_blank" class="fa fa-facebook"></a>
-			<a href="https://www.instagram.com/jitjotsactivities/?hl=en" target="_blank" class="fa fa-instagram"></a>
+			<a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
 			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
 	</div>
