--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
 <div class="container-fluid">
-	<a class="navbar-logo" href="jitjots.com"><img src="img/logo.png" style="height: 100px;"></a>
+	<a class="navbar-logo" href="http://www.jitjots.com"><img src="img/logo.png" style="height: 100px;"></a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 	data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
