Media query for homepage

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <div id="slide-area">
 	<div class="container-fluid">
-	<div class="row">
-		<div class="col-lg-4">
+	<div class="row main-page-row">
+		<div class="col-lg-4" id="carousel-caption-col">
 			<div class="carousel-caption">
 				<h1 class="display-2">Jit Jots</h1>
 				<p>Jit Jots activity sheets contain educational yet fun activities with the aim of 
@@ -61,10 +61,6 @@
 				 <button id= "get-involved-btn" type="button" class="btn btn-dark btn-lg">Get Involved</button> 
 					-->
 			</div>
-		</div>
-
-		<div class="col">
-
 		</div>
 
 		<div class="col main-page-img">
