--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -51,7 +51,7 @@
 
 <div class="container-fluid padding">
 <div class="row team-row text-center">
-    <div class="col-lg-2">
+    <div class="col team-outer-edge">
 
     </div>
     <div class="col team-member">
@@ -99,12 +99,12 @@
         </div>
 
     </div>
-    <div class="col-lg-2">
+    <div class="col team-outer-edge">
     </div>
 </div>
 
 <div class="row team-row text-center">
-    <div class="col-lg-2">
+    <div class="col team-outer-edge">
 
     </div>
     <div class="col team-member">
@@ -137,7 +137,7 @@
         </div>
 
     </div>
-    <div class="col-lg-2">
+    <div class="col team-outer-edge">
         
     </div>
 </div>
