Basic Media query for Meet the Team page

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -49,12 +49,9 @@
 
 <!-- Main content -->
 
-<div class="container-fluid padding">
-<div class="row team-row text-center">
-    <div class="col team-outer-edge">
-
-    </div>
-    <div class="col team-member">
+<div class="container-fluid" style="background-color: #F3F3F3">
+<div class="row team-row text-center" id="top-team-row">
+    <div class="col team-member" id="dean">
         <h1>Dean Yoo</h1>
         <img src="img/test.jpg" class="headshot">
         <p>
@@ -99,14 +96,9 @@
         </div>
 
     </div>
-    <div class="col team-outer-edge">
-    </div>
 </div>
 
 <div class="row team-row text-center">
-    <div class="col team-outer-edge">
-
-    </div>
     <div class="col team-member">
         <h1>Tyler Silva</h1>
         <img src="img/test.jpg" class="headshot">
@@ -137,13 +129,10 @@
         </div>
 
     </div>
-    <div class="col team-outer-edge">
-        
-    </div>
 </div>
 </div>
 
-<div id= "meet-the-team-filler" class="row">
+<div id= "meet-the-team-roles" class="row">
     <p class="rectangle role-detail content-producer left-most">Content Producer</p>
     <p class="rectangle role-detail volunteer">Volunteer Recruiter</p>
     <p class="rectangle role-detail video-editor">Video Editor</p>
