Touchups on media query for meet the team page

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -98,7 +98,7 @@
     </div>
 </div>
 
-<div class="row team-row text-center">
+<div class="row team-row text-center" id="bot-team-row">
     <div class="col team-member">
         <h1>Tyler Silva</h1>
         <img src="img/test.jpg" class="headshot">
