Meta tags added

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -3,8 +3,12 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Jit Jots</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Jit Jots, jitjots, jit jots, activity sheets, Activity sheets, worksheets, Worksheets">
+    <meta name="description" content="Jit Jots activity sheets contain educational yet fun activities with the 
+                                    aim of teaching elementary school students various educational topics.">
+	<meta name="author" content="Anthony Baek">
+	<title>Activity Sheets</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
