--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="keywords" content="Jit Jots, jitjots, jit jots, activity sheets, Activity sheets, worksheets, Worksheets">
+	<meta name="description" content="Jit jots is a non-profit organization that provides free worksheets.">
+	<meta name="author" content="Anthony Baek">
 	<title>Jit Jots</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
