--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="Jit Jots, jitjots, jit jots, activity sheets, Activity sheets, worksheets, Worksheets">
-	<meta name="description" content="Jit jots is a non-profit organization that provides free worksheets.">
+	<meta name="keywords" content="jit jots, jitjots, activity sheets, activity sheets for kids,
+	 activity sheets for kindergarten, kindergarten activity sheets, activity sheets for grade 1, 
+	 activity sheets for grade 2, activity sheets for grade 3, worksheets, worksheets kindergarten, 
+	 worksheets for kindergarten, kindergarten worksheets, color page, colour page, kids color pages, 
+	 kids colour pages, free activity sheets, free worksheets, free science worksheets, 
+	 science worksheets, science activity sheets, printable worksheets, printable activity sheets,
+	 free sceicne printables, printable activities for kids">
+	<meta name="description" content="Jit Jots activity sheets contain educational yet fun activities 
+	with the aim of teaching elementary school students various science topics.">
 	<meta name="author" content="Anthony Baek">
 	<title>Jit Jots</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
