Quick meta changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	 kids colour pages, free activity sheets, free worksheets, free science worksheets, 
 	 science worksheets, science activity sheets, printable worksheets, printable activity sheets,
 	 free sceicne printables, printable activities for kids">
-	<meta name="description" content="Jit Jots activity sheets contain educational yet fun activities 
-	with the aim of teaching elementary school students various science topics.">
+	<meta name="description" content="Jit Jots is a non-profit organization that provides free 
+	science-oriented activity sheets for elementary school students.">
 	<meta name="author" content="Anthony Baek">
 	<title>Jit Jots</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -65,8 +65,8 @@
 		<div class="col-lg-4" id="carousel-caption-col">
 			<div class="carousel-caption">
 				<h1 class="display-2">Jit Jots</h1>
-				<p>Jit Jots activity sheets contain educational yet fun activities with the aim of 
-					teaching elementary school students various science topics.</p>
+				<p>Jit Jots is a non-profit organization that provides free science-oriented 
+					activity sheets for elementary school students.</p>
 					<!--
 				 <button id= "get-involved-btn" type="button" class="btn btn-dark btn-lg">Get Involved</button> 
 					-->
