--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -73,7 +73,7 @@
         <img src="img/test.jpg" class="headshot">
         <p>
             University of British Columbia, 2022
-            <br>Biology, BSc
+            <br>Biology, BSc.
         </p>
 
         <div class="row role-row">
