Typo fixes and updated pictures

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -10,7 +10,7 @@
 	 worksheets for kindergarten, kindergarten worksheets, color page, colour page, kids color pages, 
 	 kids colour pages, free activity sheets, free worksheets, free science worksheets, 
 	 science worksheets, science activity sheets, printable worksheets, printable activity sheets,
-	 free sceicne printables, printable activities for kids">
+	 free science printables, printable activities for kids">
     <meta name="description" content="Jit Jots activity sheets contain educational yet fun activities with the 
                                     aim of teaching elementary school students various educational topics.">
 	<meta name="author" content="Anthony Baek">
