--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	 worksheets for kindergarten, kindergarten worksheets, color page, colour page, kids color pages, 
 	 kids colour pages, free activity sheets, free worksheets, free science worksheets, 
 	 science worksheets, science activity sheets, printable worksheets, printable activity sheets,
-	 free sceicne printables, printable activities for kids">
+	 free science printables, printable activities for kids">
 	<meta name="description" content="Jit Jots is a non-profit organization that provides free 
 	science-oriented activity sheets for elementary school students.">
 	<meta name="author" content="Anthony Baek">
