--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -55,7 +55,7 @@
 <div class="row team-row text-center" id="top-team-row">
     <div class="col team-member" id="dean">
         <h1>Dean Yoo</h1>
-        <img src="img/test.jpg" class="headshot">
+        <img src="img/People/dean.jpg" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Biology, BSc.
@@ -70,7 +70,7 @@
     </div>
     <div class="col team-member">
         <h1>Emma Coupal</h1>
-        <img src="img/test.jpg" class="headshot">
+        <img src="img/People/emma.jpg" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Biology, BSc.
@@ -103,7 +103,7 @@
 <div class="row team-row text-center" id="bot-team-row">
     <div class="col team-member">
         <h1>Tyler Silva</h1>
-        <img src="img/test.jpg" class="headshot">
+        <img src="img/People/tyler.png" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Computer Science, BSc.
@@ -118,7 +118,7 @@
     </div>
     <div class="col team-member">
         <h1>Anthony Baek</h1>
-        <img src="img/test.jpg" class="headshot">
+        <img src="img/People/anthony.png" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Computer Science, BSc.
