--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -85,7 +85,7 @@
     </div>
     <div class="col team-member">
         <h1>Sean Dang</h1>
-        <img src="img/test.jpg" class="headshot">
+        <img src="img/People/sean.jpg" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Microbiology and Immunology, BSc.
