Updated pictures and removed broken FB button

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 		</div>
 		<div id="follow" class="col-md-8">
 			<h2>Follow us on</h2>
-			<a href="https://www.facebook.com/Jit-Jots-103649161386666/?modal=admin_todo_tour" target="_blank" class="fa fa-facebook"></a>
+			<!--<a href="#" target="_blank" class="fa fa-facebook"></a>-->
 			<a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
 			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
