--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -71,9 +71,9 @@
             <p>Jit Jots activity sheets contain educational yet fun activities with the 
                 aim of teaching elementary school students various educational topics. </p>
             <br>
-            <p>Jit Jots activity pages are categorized as either primary or intermediate. 
-                The primary level activity sheets are intended for children in grades K-3 
-                and the intermediate level activity sheets are intended for children in grades 4-7.</p>
+            <p>Jit Jots activity sheets follow a monthly theme that encompasses broad science 
+               topics. Once a month, an in-person workshop can be booked where our members host 
+               fun and engaging activities based on the monthly theme.</p>
         </div>
     </div>
     </div>
@@ -164,6 +164,7 @@
 
 <!--- Footer -->
 
+<!--- Footer -->
 <footer>
 	<div class="container-fluid padding">
 	<div class="row text-center">
@@ -173,7 +174,7 @@
 		</div>
 		<div id="follow" class="col-md-8">
 			<h2>Follow us on</h2>
-			<a href="https://www.facebook.com/Jit-Jots-103649161386666/?modal=admin_todo_tour" target="_blank" class="fa fa-facebook"></a>
+			<!--<a href="#" target="_blank" class="fa fa-facebook"></a>-->
 			<a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
 			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
