--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -131,10 +131,10 @@
                         <h5>Global Warming</h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://drive.google.com/file/d/1zvAJDKolHiJT4XbtzgXCwWq2qkWxCoqK/view?usp=sharing" target="_blank">
+                        <a href="https://bit.ly/2R6nhl3" target="_blank">
                             <img class="sheet-preview" src="img/Sheet Previews/recycling.jpg">
                         </a>
-                        <a href="https://drive.google.com/file/d/1ECKNIqiE1vjf2gQyUSNB5RyVx2SpmES7/view?usp=sharing" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/32Yzm0O" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
 
