--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -128,7 +128,7 @@
                         <h2>Issue 01</h2>
                         <h5>Week 1</h5>
                         <h2>Topic</h2>
-                        <h5>Global Warming</h5>
+                        <h5>Recycling</h5>
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/2R6nhl3" target="_blank">
