--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -36,19 +36,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-            <!--	<li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-            -->
                 <li class="nav-item">
                     <a class="nav-link" href="meet-the-team">Meet the Team</a>
                 </li> 
                 <li class="nav-item">
                     <a class="nav-link active" href="activity-sheets">Activity Sheets</a>
                 </li>
-            <!---	<li class="nav-item">
-                    <a class="nav-link" href="#">Get Involved</a>
-                </li> -->
+            	<li class="nav-item">
+                    <a class="nav-link" href="get-involved">Get Involved</a>
+                </li> 
                 <li class="nav-item">
                     <a class="nav-link" href="#contact-email">Contact</a>
                 </li>
