Small changes to nav bar and fooer

--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -28,6 +28,9 @@
 	</button>
 	<div class="collapse navbar-collapse" id="navbarResponsive">
 		<ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+				<a class="nav-link" href="http://www.jitjots.com">Home</a>
+			</li>
 			<li class="nav-item">
 				<a class="nav-link active" href="meet-the-team">Meet the Team</a>
 			</li> 
@@ -37,9 +40,6 @@
 			<li class="nav-item">
 				<a class="nav-link" href="get-involved">Get Involved</a>
 			</li> 
-			<li class="nav-item">
-				<a class="nav-link" href="#contact-email">Contact</a>
-			</li>
 		</ul>
 	</div>
 </div>
@@ -143,16 +143,16 @@
 
 <!--- Footer -->
 <footer>
-	<div class="container-fluid padding">
+	<div class="container-fluid">
 	<div class="row text-center">
 		<div id="contact" class="col-md-4">
-			<h2>Contact us at</h2>
+			<h5>Contact us at</h5>
 			<p id="contact-email">contact@jitjots.com</p>
 		</div>
 		<div id="follow" class="col-md-8">
-			<h2>Follow us on</h2>
+			<h5>Follow us on</h5>
 			<!--<a href="#" target="_blank" class="fa fa-facebook"></a>-->
-			<a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
+            <a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
 			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
 	</div>
