--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -28,30 +28,30 @@
 <!-- Nav stuff -->
 
 <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
-    <div class="container-fluid">
-        <a class="navbar-logo" href="http://www.jitjots.com"><img src="img/logo.png" style="height: 100px;"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="meet-the-team">Meet the Team</a>
-                </li> 
-                <li class="nav-item">
-                    <a class="nav-link active" href="activity-sheets">Activity Sheets</a>
-                </li>
-            	<li class="nav-item">
-                    <a class="nav-link" href="get-involved">Get Involved</a>
-                </li> 
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact-email">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    </nav>
+<div class="container-fluid">
+	<a class="navbar-logo" href="http://www.jitjots.com"><img src="img/logo.png" style="height: 100px;"></a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse"
+	data-target="#navbarResponsive">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarResponsive">
+		<ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+				<a class="nav-link" href="http://www.jitjots.com">Home</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="meet-the-team">Meet the Team</a>
+			</li> 
+			<li class="nav-item">
+				<a class="nav-link active" href="activity-sheets">Activity Sheets</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="get-involved">Get Involved</a>
+			</li> 
+		</ul>
+	</div>
+</div>
+</nav>
 
 <!-- Maintenance screen
 <div>
@@ -154,15 +154,15 @@
 
 <!-- Footer -->
 <footer>
-	<div class="container-fluid padding">
+	<div class="container-fluid">
 	<div class="row text-center">
 		<div id="contact" class="col-md-4">
-			<h2>Contact us at</h2>
+			<h5>Contact us at</h5>
 			<p id="contact-email">contact@jitjots.com</p>
 		</div>
 		<div id="follow" class="col-md-8">
-			<h2>Follow us on</h2>
-			<!-- <a href="#" target="_blank" class="fa fa-facebook"></a> -->
+			<h5>Follow us on</h5>
+			<!--<a href="#" target="_blank" class="fa fa-facebook"></a>-->
 			<a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
 			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
