--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		</div>
 		<div id="follow" class="col-md-8">
 			<h5>Follow us on</h5>
-			<!--<a href="#" target="_blank" class="fa fa-facebook"></a>-->
+			<a href="https://www.facebook.com/Jit-Jots-118153186687897/" target="_blank" class="fa fa-facebook"></a>
 			<a href="https://www.instagram.com/jitjotsofficial/?hl=en" target="_blank" class="fa fa-instagram"></a>
 			<!-- <a href="#" class="fa fa-youtube"></a> -->
 		</div>
