Updated sheets page

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -121,6 +121,21 @@
 
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
+                        <h2>Issue 04</h2>
+                        <h5>Week 4</h5>
+                        <h2>Energy</h2>
+                        <h5></h5>
+                    </div>
+                    <div id="blank-sheet" class="col">
+                        <a href="https://bit.ly/3hGQ1LW" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/energy.jpg">
+                        </a>
+                        <a href="https://bit.ly/2RGWVGe" target="_blank" class="btn btn-colour-1">Answers</a>
+                    </div>
+                </div>
+
+                <div class="row issue-display">
+                    <div class="col text-center sheet-info">
                         <h2>Issue 02</h2>
                         <h5>Week 2</h5>
                         <h2>Climate Change</h2>
@@ -138,8 +153,7 @@
                     <div class="col text-center sheet-info">
                         <h2>Issue 01</h2>
                         <h5>Week 1</h5>
-                        <h2>Topic</h2>
-                        <h5>Recycling</h5>
+                        <h2>Recycling</h2>
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/2R6nhl3" target="_blank">
