Fixed application form being distorted

--- a/get-involved.html
+++ b/get-involved.html
@@ -50,7 +50,7 @@
 <div id="get-involved" class="container-fluid row">
     <div id="volunteer-application" class="col">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdTTjrirxNqJISiIpi0Ck-HZT-Xn_CNeCo1D77Mm82ROhlYiA/viewform?embedded=true" 
-        width="640" height="1305" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        width="100%" height="1305" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 </div>
 
