--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -108,14 +108,14 @@
                     <div class="col text-center sheet-info">
                         <h2>Issue 04</h2>
                         <h5>Week 4</h5>
-                        <h2>Under Construction</h2>
+                        <h2>Extinct and Endangered Animals</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="#">
-                            <img class="sheet-preview" src="img/Sheet Previews/construction.jpg">
+                        <a href="https://bit.ly/3j8xPMT" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/extinct_and_endangered_animals.jpg">
                         </a>
-                        <a href="#" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/2G4IQAn" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
 
