Updated activity sheets page

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -107,8 +107,8 @@
                 
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 07</h2>
-                        <h5>Week 3</h5>
+                        <h2>Issue 08</h2>
+                        <h5>Week 4</h5>
                         <h2>Under Construction</h2>
                         <h5></h5>
                     </div>
@@ -117,6 +117,21 @@
                             <img class="sheet-preview" src="img/Sheet Previews/construction.jpg">
                         </a>
                         <a href="#" class="btn btn-colour-1">Answers</a>
+                    </div>
+                </div>
+
+                <div class="row issue-display">
+                    <div class="col text-center sheet-info">
+                        <h2>Issue 07</h2>
+                        <h5>Week 3</h5>
+                        <h2>Exercise</h2>
+                        <h5></h5>
+                    </div>
+                    <div id="blank-sheet" class="col">
+                        <a href="https://bit.ly/2HdvdPJ" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/exercise.jpg">
+                        </a>
+                        <a href="https://bit.ly/3j8m0Ft" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
 
