--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -109,14 +109,14 @@
                     <div class="col text-center sheet-info">
                         <h2>Issue 08</h2>
                         <h5>Week 4</h5>
-                        <h2>Under Construction</h2>
+                        <h2>Sleep</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="#">
-                            <img class="sheet-preview" src="img/Sheet Previews/construction.jpg">
+                        <a href="https://bit.ly/35GdvNh" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/sleep.jpg">
                         </a>
-                        <a href="#" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/2HxU94t" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
 
