Added alt attributes to images

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -53,16 +53,6 @@
 </div>
 </nav>
 
-<!-- Maintenance screen
-<div>
-    <h2 id="maintenance-message">Sorry for any inconveniences.
-
-        This page is currently under maintenance.
-    </h2>
-</div>
-
--->
-
 <!-- Main content (Display of activity sheets -->
 
 <div>
@@ -108,46 +98,46 @@
                 <!--
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 04</h2>
-                        <h5>Week 4</h5>
-                        <h2>Extinct and Endangered Animals</h2>
+                        <h2>Issue 0</h2>
+                        <h5>Week </h5>
+                        <h2></h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/3j8xPMT" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/extinct_and_endangered_animals.jpg">
+                        <a href="" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/">
                         </a>
-                        <a href="https://bit.ly/2G4IQAn" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
 
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 03</h2>
-                        <h5>Week 3</h5>
-                        <h2>Energy</h2>
+                        <h2>Issue 0</h2>
+                        <h5>Week </h5>
+                        <h2></h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/3hGQ1LW" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/energy.jpg">
+                        <a href="" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/">
                         </a>
-                        <a href="https://bit.ly/2RGWVGe" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
 
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 02</h2>
-                        <h5>Week 2</h5>
-                        <h2>Climate Change</h2>
+                        <h2>Issue 0</h2>
+                        <h5>Week </h5>
+                        <h2></h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/2FtDle6" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/climate-change.jpg">
+                        <a href="" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/">
                         </a>
-                        <a href="https://bit.ly/3bYkMuG" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
             -->
@@ -159,7 +149,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/3253NTE" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/planets.jpg">
+                            <img class="sheet-preview" alt="Planets activity sheet" src="img/Sheet Previews/planets.jpg">
                         </a>
                         <a href="https://bit.ly/381VbB5" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -215,7 +205,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/35GdvNh" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/sleep.jpg">
+                            <img class="sheet-preview" alt="Sleep activity sheet" src="img/Sheet Previews/sleep.jpg">
                         </a>
                         <a href="https://bit.ly/2HxU94t" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -230,7 +220,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/2HdvdPJ" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/exercise.jpg">
+                            <img class="sheet-preview" alt="Exercise activity sheet" src="img/Sheet Previews/exercise.jpg">
                         </a>
                         <a href="https://bit.ly/3j8m0Ft" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -245,7 +235,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/3lAZXc3" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/nutrition.jpg">
+                            <img class="sheet-preview" alt="Nutrition activity sheet" src="img/Sheet Previews/nutrition.jpg">
                         </a>
                         <a href="https://bit.ly/36RwzdH" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -260,7 +250,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/34pTWrW" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/viruses&germs.jpg">
+                            <img class="sheet-preview" alt="Viruses and Germs activity sheet" src="img/Sheet Previews/viruses&germs.jpg">
                         </a>
                         <a href="https://bit.ly/3ndYj1M" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -314,7 +304,8 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/3j8xPMT" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/extinct_and_endangered_animals.jpg">
+                            <img class="sheet-preview" alt="Extinct and Endangered Animals activity sheet"
+                             src="img/Sheet Previews/extinct_and_endangered_animals.jpg">
                         </a>
                         <a href="https://bit.ly/2G4IQAn" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -329,7 +320,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/3hGQ1LW" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/energy.jpg">
+                            <img class="sheet-preview" alt="Energy activity sheet" src="img/Sheet Previews/energy.jpg">
                         </a>
                         <a href="https://bit.ly/2RGWVGe" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -344,7 +335,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/2FtDle6" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/climate-change.jpg">
+                            <img class="sheet-preview" alt="Climate Change activity sheet" src="img/Sheet Previews/climate-change.jpg">
                         </a>
                         <a href="https://bit.ly/3bYkMuG" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
@@ -358,7 +349,7 @@
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/2R6nhl3" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/recycling.jpg">
+                            <img class="sheet-preview" alt="Recycling activity sheet" src="img/Sheet Previews/recycling.jpg">
                         </a>
                         <a href="https://bit.ly/32Yzm0O" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
