--- a/meet-the-team.html
+++ b/meet-the-team.html
@@ -51,7 +51,7 @@
 <div class="row team-row text-center" id="top-team-row">
     <div class="col team-member" id="dean">
         <h1>Dean Yoo</h1>
-        <img src="img/People/dean.jpg" class="headshot">
+        <img src="img/People/dean.jpg" alt="Picture of Dean Yoo" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Biology, BSc.
@@ -66,7 +66,7 @@
     </div>
     <div class="col team-member">
         <h1>Emma Coupal</h1>
-        <img src="img/People/emma.jpg" class="headshot">
+        <img src="img/People/emma.jpg" alt="Picture of Emma Coupal" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Biology, BSc.
@@ -81,7 +81,7 @@
     </div>
     <div class="col team-member">
         <h1>Sean Dang</h1>
-        <img src="img/People/sean.jpg" class="headshot">
+        <img src="img/People/sean.jpg" alt="Picture of Sean Dang" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Microbiology and Immunology, BSc.
@@ -99,7 +99,7 @@
 <div class="row team-row text-center" id="bot-team-row">
     <div class="col team-member">
         <h1>Tyler Silva</h1>
-        <img src="img/People/tyler.png" class="headshot">
+        <img src="img/People/tyler.png" alt="Picture of Tyler Silva" class="headshot">
         <p>
             University of British Columbia, 2022
             <br>Computer Science, BSc.
