--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -91,7 +91,7 @@
 
                 <div id="monthly-theme" class="row text-center">
                     <h1>
-                        This Month's Theme: Sustainability
+                        This Month's Theme: Space
                     </h1>
                 </div>
                 
@@ -192,7 +192,7 @@
 
                 <div id="monthly-theme" class="row text-center">
                     <h1>
-                        November's Theme: Health
+                        October's Theme: Health
                     </h1>
                 </div>
                 
