Updated activity sheets

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -125,27 +125,28 @@
                         <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-
+            -->
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 0</h2>
-                        <h5>Week </h5>
-                        <h2></h2>
+                        <h2>Issue 10</h2>
+                        <h5>Week 2</h5>
+                        <h2>Moon</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/">
+                        <a href="https://bit.ly/3f1gYud" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/moon.jpg">
                         </a>
-                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/3pdruTA" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            -->
+            
                 <div id="bottom-sheet" class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 09</h2>
                         <h5>Week 1</h5>
                         <h2>Planets</h2>
+                        <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
                         <a href="https://bit.ly/3253NTE" target="_blank">
