--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -125,7 +125,7 @@
                         <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            -->
+            
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 10</h2>
@@ -134,13 +134,13 @@
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/3f1gYud" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/moon.jpg">
+                        <a href="" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/">
                         </a>
-                        <a href="https://bit.ly/3pdruTA" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            
+            -->
                 <div id="bottom-sheet" class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 09</h2>
