Fixed and updated activity sheets

--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -125,22 +125,22 @@
                         <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            
+            -->
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 10</h2>
                         <h5>Week 2</h5>
-                        <h2>Moon</h2>
+                        <h2>Moons</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/">
+                        <a href="https://bit.ly/3eTQ2MS" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/moons.jpg">
                         </a>
-                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/2IrVavL" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            -->
+            
                 <div id="bottom-sheet" class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 09</h2>
