--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -134,10 +134,10 @@
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="https://bit.ly/3eTQ2MS" target="_blank">
+                        <a href="https://bit.ly/2INET4s" target="_blank">
                             <img class="sheet-preview" src="img/Sheet Previews/moons.jpg">
                         </a>
-                        <a href="https://bit.ly/2IrVavL" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/3nywTTJ" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
             
