--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -110,22 +110,22 @@
                         <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-
+            -->
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
-                        <h2>Issue 0</h2>
-                        <h5>Week </h5>
-                        <h2></h2>
+                        <h2>Issue 11</h2>
+                        <h5>Week 3</h5>
+                        <h2>Aliens</h2>
                         <h5></h5>
                     </div>
                     <div id="blank-sheet" class="col">
-                        <a href="" target="_blank">
-                            <img class="sheet-preview" src="img/Sheet Previews/">
+                        <a href="https://bit.ly/3nEbubI" target="_blank">
+                            <img class="sheet-preview" src="img/Sheet Previews/aliens.jpg">
                         </a>
-                        <a href="" target="_blank" class="btn btn-colour-1">Answers</a>
+                        <a href="https://bit.ly/35MHvbu" target="_blank" class="btn btn-colour-1">Answers</a>
                     </div>
                 </div>
-            -->
+            
                 <div class="row issue-display">
                     <div class="col text-center sheet-info">
                         <h2>Issue 10</h2>
