--- a/activity-sheets.html
+++ b/activity-sheets.html
@@ -62,6 +62,15 @@
 
         </div>
         <div id="sheets-message-text" class="col-lg-4">
+            <h1>Notice:</h1>
+            <br>
+            <p>
+                Due to most of the team being preoccupied with exams, we will not be able to release new sheets for the time being.
+                Regular updates will likely resume around January.
+                We apologize for any inconveniences in advance. 
+            </p>
+
+            <!--
             <h1>Activity Sheets</h1>
             <br>
             <p>Jit Jots activity sheets contain educational yet fun activities with the 
@@ -70,6 +79,7 @@
             <p>Jit Jots activity sheets follow a monthly theme that encompasses broad science 
                topics. Once a month, an in-person workshop can be booked where our members host 
                fun and engaging activities based on the monthly theme.</p>
+            -->
         </div>
     </div>
     </div>
